--- a/app/src/main/res/layout/layout_floatview.xml
+++ b/app/src/main/res/layout/layout_floatview.xml
@@ -21,6 +21,11 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_gravity="center_vertical"/>
+            <me.lake.live4danmaku.widget.DanmakuSurfaceView
+                android:id="@+id/dsv_danmaku"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center_vertical"/>
         </FrameLayout>
 
     </FrameLayout>
